Añadir estilos básicos a la páguina inicial

--- a/index.html
+++ b/index.html
@@ -6,32 +6,64 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Simuladores Universae</title>
         <link rel="stylesheet" href="style.css" />
+        <script
+            src="https://kit.fontawesome.com/29a9066450.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <header>
             <a href="#" class="logo">
-                <img src="img/HeaderWebUniversae.png" alt="UNIVERSAE Instituto Superior de FP" />
+                <img
+                    src="img/HeaderWebUniversae.png"
+                    alt="UNIVERSAE Instituto Superior de FP"
+                />
             </a>
         </header>
 
         <section>
             <div class="main-container">
-                <div class="simulator-1">
-                    <img src="img/Miniaturas simuladores/HomeButton0.png" alt="">
+                <div class="simulator">
+                    <a href="#"
+                        ><img
+                            src="img/Miniaturas simuladores/HomeButton0.png"
+                            alt=""
+                    /></a>
                 </div>
-                <div class="simulator-2">
-                    <img src="img/Miniaturas simuladores/HomeButton1.png" alt="">
+                <div class="simulator">
+                    <a href=""
+                        ><img
+                            src="img/Miniaturas simuladores/HomeButton1.png"
+                            alt=""
+                    /></a>
                 </div>
-                <div class="simulator-3">
-                    <img src="img/Miniaturas simuladores/HomeButton2.png" alt="">
+                <div class="simulator">
+                    <a href=""
+                        ><img
+                            src="img/Miniaturas simuladores/HomeButton2.png"
+                            alt=""
+                    /></a>
                 </div>
-                <div class="simulator-4">
-                    <img src="img/Miniaturas simuladores/HomeButton3.png" alt="">
+                <div class="simulator">
+                    <a href=""
+                        ><img
+                            src="img/Miniaturas simuladores/HomeButton3.png"
+                            alt=""
+                    /></a>
                 </div>
-                <div class="simulator-5">
-                    <img src="img/Miniaturas simuladores/HomeButton4.png" alt="">
-                <div class="simulator-6">
-                    <img src="img/Miniaturas simuladores/HomeButton5.png" alt="">
+                <div class="simulator">
+                    <a href=""
+                        ><img
+                            src="img/Miniaturas simuladores/HomeButton4.png"
+                            alt=""
+                    /></a>
+                </div>
+                <div class="simulator">
+                    <a href=""
+                        ><img
+                            src="img/Miniaturas simuladores/HomeButton5.png"
+                            alt=""
+                    /></a>
                 </div>
             </div>
         </section>
@@ -39,28 +71,28 @@
         <footer>
             <div class="enalces-container">
                 <a href="https://www.facebook.com/UNIVERSAE/">
-                    <img src="img/facebook-brands.svg" alt=""/>
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
                 <a href="https://www.instagram.com/_universae/?hl=es">
-                    <img src="img/instagram-brands.svg" alt=""/>
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="https://www.youtube.com/c/UNIVERSAE_FP">
-                    <img src="img/youtube-brands.svg" alt=""/>
+                    <i class="fa-brands fa-youtube"></i>
                 </a>
                 <a href="https://www.youtube.com/c/UNIVERSAE_FP">
-                    <img src="img/twitch-brands.svg" alt=""/>
+                    <i class="fa-brands fa-twitch"></i>
                 </a>
                 <a href="https://www.linkedin.com/school/universae">
-                    <img src="" alt=""/>
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
                 <a href="https://www.tiktok.com/@_universae">
-                    <img src="img/tiktok-brands.svg" alt=""/>
+                    <i class="fa-brands fa-tiktok"></i>
                 </a>
                 <a href="https://twitter.com/_Universae">
-                    <img src="img/twitter-brands.svg" alt=""/>
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
                 <a href="https://universae.com">
-                    <img src="img/google-brands.svg" alt="" />
+                    <i class="fa-brands fa-google"></i>
                 </a>
             </div>
         </footer>
