--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img
                     src="img/HeaderWebUniversae.png"
                     alt="UNIVERSAE Instituto Superior de FP"
@@ -24,42 +24,42 @@
         <section>
             <div class="main-container">
                 <div class="simulator">
-                    <a href="#"
+                    <a href="simuladores/rescateEnAscensor.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton0.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href=""
+                    <a href="simuladores/embarqueYDesembarque.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton1.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href=""
+                    <a href="simuladores/epis.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton2.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href=""
+                    <a href="simuladores/hemorragia.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton3.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href=""
+                    <a href="simuladores/maniobrasDeExtincion.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton4.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href=""
+                    <a href="simuladores/señalizacionAHelicoptero.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton5.png"
                             alt=""
