--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
         <section>
             <div class="main-container">
                 <div class="simulator">
-                    <a href="simuladores/rescateEnAscensor.html"
+                    <a href="simuladores.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton0.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores/embarqueYDesembarque.html"
+                    <a href="simuladores.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton1.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores/epis.html"
+                    <a href="simuladores.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton2.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores/hemorragia.html"
+                    <a href="simuladores.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton3.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores/maniobrasDeExtincion.html"
+                    <a href="simuladores.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton4.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores/señalizacionAHelicoptero.html"
+                    <a href="simuladores.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton5.png"
                             alt=""
