Crear paguinas específicas para cada simulador

--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
         <section>
             <div class="main-container">
                 <div class="simulator">
-                    <a href="simuladores.html"
+                    <a href="simuladores/ascensor.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton0.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores.html"
+                    <a href="simuladores/embarque.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton1.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores.html"
+                    <a href="simuladores/epis.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton2.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores.html"
+                    <a href="simuladores/hemorragia.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton3.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores.html"
+                    <a href="simuladores/helicoptero.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton4.png"
                             alt=""
                     /></a>
                 </div>
                 <div class="simulator">
-                    <a href="simuladores.html"
+                    <a href="simuladores/extincion.html"
                         ><img
                             src="img/Miniaturas simuladores/HomeButton5.png"
                             alt=""
