--- a/simuladores/hemorragia.html
+++ b/simuladores/hemorragia.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Simuladores Universae</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="../style.css" />
         <script
             src="https://kit.fontawesome.com/29a9066450.js"
             crossorigin="anonymous"
@@ -13,9 +13,9 @@
     </head>
     <body>
         <header>
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <img
-                    src="img/HeaderWebUniversae.png"
+                    src="../img/HeaderWebUniversae.png"
                     alt="UNIVERSAE Instituto Superior de FP"
                 />
             </a>
@@ -25,7 +25,7 @@
             <div class="simulator-container">
                 <div class="simulator-content">
                     <iframe
-                        src="https://html-classic.itch.zone/html/8839341/index.html"
+                        src="https://html-classic.itch.zone/html/8329947/index.html"
                         width="100%"
                         height="700"
                         frameborder="0"
@@ -60,16 +60,19 @@
                 </div>
                 <div class="carousel-container">
                     <div class="carousel-slide">
-                        <img src="img/Embarque/Embarque0.png" alt="" />
+                        <img src="../img/Hemorragia/Hemorragia0.png" alt="" />
                     </div>
                     <div class="carousel-slide">
-                        <img src="img/Embarque/Embarque1.png" alt="" />
+                        <img src="../img/Hemorragia/Hemorragia1.png" alt="" />
                     </div>
                     <div class="carousel-slide">
-                        <img src="img/Embarque/Embarque2.png" alt="" />
+                        <img src="../img/Hemorragia/Hemorragia2.png" alt="" />
                     </div>
                     <div class="carousel-slide">
-                        <img src="img/Embarque/Embarque3.png" alt="" />
+                        <img src="../img/Hemorragia/Hemorragia3.png" alt="" />
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="../img/Hemorragia/Hemorragia4.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -117,6 +120,6 @@
             </button>
         </div>
 
-        <script src="srcipt.js"></script>
+        <script src="../srcipt.js"></script>
     </body>
 </html>
